CloudAlpacas/salesforce/main/default/objects/SDO_Analytics_Survey_Question_Response__c/SDO_Analytics_Survey_Question_Response__c.object-meta.xml
<CustomObject>
    <description>Shadow object for SurveyQuestionResponse. Stores demo CSAT survey question response data for Service Insights Cases CSAT dashboard. Feeds ssot__SurveyQuestionResponse__dlm via a SalesforceDotCom data stream in Data Cloud.</description>
    <label>SDO Analytics Survey Question Response</label>
    <nameField>
        <displayFormat>SQR-{00000}</displayFormat>
        <label>SDO Analytics Survey Question Response N</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SDO Analytics Survey Question Responses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>