CloudAlpacas/salesforce/main/default/objects/SDO_Analytics_Survey_Question_Response__c/fields/Real_Survey_Question_Id__c.field-meta.xml
<CustomField>
    <fullName>Real_Survey_Question_Id__c</fullName>
    <description>Stores the standard SurveyQuestion record ID. Maps to ssot__SurveyQuestionId__c on ssot__SurveyQuestionResponse__dlm. Replaces the shadow-object ID field.</description>
    <label>Real Survey Question Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>